--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -227,7 +227,7 @@ bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, MINUS, workspace, special 
+bind = $mainMod, MINUS, workspace, special
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -251,7 +251,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Change workspace 
+# Change workspace
 bind = $mainMod CTRL, left, workspace, e-1
 bind = $mainMod CTRL, right, workspace, e+1
 
@@ -310,3 +310,8 @@ windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+
+# make portals see Hyprland’s env
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE HYPRLAND_INSTANCE_SIGNATURE
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_TYPE HYPRLAND_INSTANCE_SIGNATURE
+
