--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -57,7 +57,7 @@
     },
     "custom/launcher":{
         "format": " ",
-        "on-click": "wofi --show drun --term=ghostty --width=40% --columns 2 -I -s ~/.config/wofi/style.css",
+        "on-click": "wofi --show drun",
         "on-click-right": "killall wofi"
     },
     "custom/power": {
